#219: Fix: language selector cannot fit in the screen on mobile

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -605,7 +605,7 @@ body {
 }
 @media (max-width: 576px) {
   body {
-    padding-top: 1vh;
+    padding-top: 2.5vh;
     padding-bottom: 1vh;
     min-height: 90vh;
   }
